# RustSerialTool

./: README.md  package.json  tailwind.config.js  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: connect.rs  mod.rs  read.rs
src-tauri/src/model/: conn_config.rs  mod.rs  state.rs
src/panel/: ConnConfig.svelte  InputConfig.svelte  OutputArea.svelte  OutputConfig.svelte
